--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@types/react-dom": "19.0.3",
     "aos": "3.0.0-beta.6",
     "framer-motion": "^12.23.24",
-    "next": "15.1.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "^15.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "typescript": "^5.7.3"
   },
