--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@openrouter/ai-sdk-provider": "^1.2.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "ai": "^5.0.97",
     "aos": "3.0.0-beta.6",
     "framer-motion": "^12.23.24",
     "next": "^15.1.0",
