--- a/package.json
+++ b/package.json
@@ -11,25 +11,28 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@openrouter/ai-sdk-provider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
     "@types/node": "^22.13.0",
-    "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "ai": "^5.0.97",
     "aos": "3.0.0-beta.6",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "next": "^15.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.3",
     "@types/aos": "^3.0.7",
+    "@types/react": "19.0.8",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3"
   }
