--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.3",
     "@types/aos": "^3.0.7",
-    "@types/react": "19.0.8",
+    "@types/react": "^19.0.8",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3"
   }
