--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.44",
     "@headlessui/react": "^2.2.0",
     "@openrouter/ai-sdk-provider": "^1.2.3",
     "@radix-ui/react-slot": "^1.2.4",
@@ -17,14 +18,17 @@
     "@supabase/supabase-js": "^2.81.1",
     "@types/node": "^22.13.0",
     "@types/react-dom": "19.0.3",
-    "ai": "3.4.5",
+    "ai": "^3.4.33",
     "aos": "3.0.0-beta.6",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "next": "^15.1.0",
+    "openai": "^4.104.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-textarea-autosize": "^8.5.9",
     "tailwind-merge": "^3.4.0",
     "typescript": "^5.7.3"
   },
