--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-icons": "^5.5.0",
     "react-textarea-autosize": "^8.5.9",
     "tailwind-merge": "^3.4.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
